# leetcode-ht

./: .gitignore  .gitmodules  Booklet.xlsx  README.md  dp.md  pom.xml
leetcode-c/: .gitignore  leetcode.py  standard_defs.mk
leetcode-c/templates/: Makefile  test_solution.c
leetcode-cpp/: Makefile  leetcode.py
leetcode-cpp/_0xx/: _1_two_sum.cpp  _54_problem_example.cpp
leetcode-cpp/_16xx/: _1780_check_if_num_sum_power_of_three.cpp  _1791_find_center_star_graph.cpp
leetcode-cpp/_20xx/: _2115_find_all_possible_recipes_from_supplies.cpp  _2161_partition_array_according_to_pivot.cpp
leetcode-cpp/_22xx/: _2206_divide_array_into_equal_pairs.cpp  _2226_max_candy_allocated_k_children.cpp  _2379_min_recolors_get_k_consecutive_black.cpp
leetcode-cpp/_24xx/: _2523_closest_prime_num_in_range.cpp  _2570_merge_two_2darray.cpp  _2574_left_right_sum_difference.cpp
leetcode-cpp/_28xx/: _2965_find_missing_and_repeated_values.cpp
leetcode-cpp/_2xx/: _219_contains_duplicate_2.cpp  _326_power_of_three.cpp
leetcode-cpp/_30xx/: _3169_count_days_without_meetings.cpp
leetcode-cpp/_8xx/: _875_koko_eating_banana.cpp
leetcode-cpp/playground/: learn-vector.cpp
leetcode-cpp/test/: htcatch.h
leetcode-cpp2/: CMakeLists.txt  leetcode.py  pyproject.toml  serde
leetcode-cpp2/_0xx/: CMakeLists.txt  _120_triangle.cpp  _191_count_1_bit.cpp  _84_largest_rectangle_histogram.cpp
leetcode-cpp2/_10xx/: CMakeLists.txt  _1004_max_consecutive_one.cpp  _1081_smallest_subsequence_distinct_char.cpp
leetcode-cpp2/_12xx/: CMakeLists.txt  _1277_count_square_submatrices_with_all_ones.cpp  _1304_find_n_unique_int_sum_to_zero.cpp  _1323_max_69_number.cpp
leetcode-cpp2/_14xx/: CMakeLists.txt  _1493_longest_subarray_of_one.cpp  _1504_count_submatrices_with_all_ones.cpp
leetcode-cpp2/_16xx/: CMakeLists.txt  _1673_find_the_most_competitive_subsequence.cpp  _1733_min_people_to_teach.cpp  _1792_max_average_pass_ratio.cpp
leetcode-cpp2/_18xx/: CMakeLists.txt  _1935_max_number_words_you_can_type.cpp
leetcode-cpp2/_20xx/: CMakeLists.txt  _2125_number_laser_beam.cpp
leetcode-cpp2/_22xx/: CMakeLists.txt  _2264_largest_3_same_digit_in_string.cpp  _2327_number_people_aware_secret.cpp  _2351_first_letter_appear_twice.cpp
leetcode-cpp2/_26xx/: CMakeLists.txt  _2785_sort_vowels_in_str.cpp
leetcode-cpp2/_2xx/: CMakeLists.txt  _321_create_maximum_number.cpp  _342_power_of_four.cpp  _345_reverse_vowels_of_str.cpp
leetcode-cpp2/_30xx/: CMakeLists.txt  _3000_max_area_of_logest_diagonal_rect.cpp  _3195_find_min_area_cover_all_ones.cpp
leetcode-cpp2/_32xx/: CMakeLists.txt  _3227_vowels_game_in_str.cpp  _3370_smallest_number_with_set_bits.cpp
leetcode-cpp2/_4xx/: CMakeLists.txt  _402_remove_k_digits.cpp  _485_max_consecutive_ones.cpp
leetcode-cpp2/_8xx/: CMakeLists.txt  _812_largest_triangle_area.cpp
leetcode-cpp2/playground/: CMakeLists.txt  playground.cpp
leetcode-cpp2/utils/: CMakeLists.txt  serde.cpp
leetcode-java/: .gitignore  leetcode.py  pom.xml
leetcode-python/: README.md  create_readme_md.py  leetcode.py  pyproject.toml
leetcode-python/_0xx/: _120_triangle.py  _123_best_time_buy_sell_stock_3.py  _144_binary_tree_preorder_traversal.py  _3_longest_substring_without_repeating_character.py  _47_permutation_2.py  _54_spiral_matrix.py
leetcode-python/_10xx/: _1019_next_greater_node_linked_list.py  _1079_letter_tile_possibilities.py  _1140_stone_game_2.py  _1181_max_level_sum_binary_tree.py
leetcode-python/_12xx/: _1248_count_number_nice_subarray.py  _1261_find_elements_in_contaminated_binary_tree.py  _1320_min_distance_to_type_a_word.py  _1339_max_product_of_splitted_binary_tree.py  _1339_test.txt  _1352_product_last_k_numbers.py  _1358_number_str_contain_all_three_characters.py  _1367_linked_list_in_binary_tree.py  _1371_find_longest_substr_containing_vowels.py  _1382_balance_a_bst.py  _1390_four_divisors.py  _1395_count_number_teams.py
leetcode-python/_14xx/: _1415_the_kth_lexicographical_string_of_all_happy_string.py  _1437_check_all_one_k_places_away.py  _1493_longest_subarray_of_one_after_deleting_one.py  _1497_check_if_array_pairs_are_divisible_by_k.py  _1513_number_substr_with_only_one.py  _1524_number_subarray_with_odd_sum.py  _1526_mim_increment_subarray_form_target.py  _1578_min_time_make_rope_colorful.py  _1590_make_sum_divisible_by_p.py
leetcode-python/_16xx/: _1653_min_deletion_make_string_balanced.py  _1671_min_removals_to_make_mountain_array.py  _1695_max_erasure_value.py  _1733_min_people_to_teach.py  _1749_max_abs_sum_of_subarray.py  _1763_longest_nice_substr.py  _1780_check_num_sum_powers_of_three.py
leetcode-python/_18xx/: _1813_sentence_similarity_3.py  _1833_max_ice_cream.py  _1863_sum_subset_xor_totals.py  _1877_minimize_max_pair_sum.py  _1944_number_visible_people_in_queue.py  _1963_min_swaps_to_make_string_balanced.py  _1972_max_average_pass_ratio.py  _1980_find_unique_binary_string.py  _1985_find_kth_largest_int_in_arr.py
leetcode-python/_20xx/: _2028_find_missing_observations.py  _2043_simple_bank_system.py  _2044_count_number_max_bitwise_or_subsets.py  _2092_find_all_people_with_secret.py  _2094_find_3_digit_even_numbers.py  _2095_delete_middle_node_of_linked_list.py  _2099_find_subsequence_len_k_with_largest_sum.py  _2104_sum_subarray_range.py  _2110_number_smooth_descent_period.py  _2115_find_all_possible_recipes_from_supplies.py  _2130_max_twin_sum_of_linked_list.py  _2131_longest_palindrome_by_concatenating_two_letter_words.py  _2134_min_swaps_to_group_one.py  _2140_solving_questions_with_brainpower.py  _2141_max_running_time_n_computers.py  _2147_number_ways_divide_long_corridor.py  _2163_min_diff_in_sums_after_removal_elements.py  _2197_replace_non_coprime_numbers.py
leetcode-python/_22xx/: _2210_count_hills_and_valleys.py  _2257_count_unguarded_cell.py  _2327_number_people_aware_of_secret.py  _2342_max_sum_a_pair_with_equal_sum_digits.py  (+2 more)
leetcode-ts/: .eslintrc  .prettierrc  leetcode.py  package.json  tsconfig.json  vitest.config.ts
python/: README.md  create_readme_md.py  leetcode.py  research_simulation.py
python/no_fail/: challenge_1.py  (+6 more)
(+807 files in other folders)
