cmake_minimum_required(VERSION 3.15)

# _191_count_1_bit test binary
add_executable(_191_count_1_bit _191_count_1_bit.cpp)
target_link_libraries(_191_count_1_bit PRIVATE Catch2::Catch2WithMain)

add_executable(_84_largest_rectangle_histogram _84_largest_rectangle_histogram.cpp)
target_link_libraries(_84_largest_rectangle_histogram PRIVATE Catch2::Catch2WithMain)
add_executable(_120_triangle _120_triangle.cpp)
target_link_libraries(_120_triangle PRIVATE Catch2::Catch2WithMain)
